# vty-ui-builder

./: README  TODO  demo.xml  test.xml  vty-ui-builder.cabal
dtd/: bordered.dtd  boxFixed.dtd  boxLimit.dtd  button.dtd  centered.dtd  checkBox.dtd  collection.dtd  common.dtd  dialog.dtd  dirBrowser.dtd  edit.dtd  fText.dtd  focusGroup.dtd  format.dtd  hBorder.dtd  hBox-sized.dtd  hBox.dtd  hCentered.dtd  hFill.dtd  hFixed.dtd  hLimit.dtd  import.dtd  interface.dtd  list.dtd  pad.dtd  params.dtd  progressBar.dtd  ref.dtd  shared.dtd  stringList.dtd  user-defined.dtd  vBorder.dtd  vBox-sized.dtd  vBox.dtd  vCentered.dtd  vFill.dtd  vFixed.dtd  vLimit.dtd
src/: Main.hs
src/Graphics/Vty/Widgets/: Builder.hs
src/Graphics/Vty/Widgets/Builder/: AST.hs  Config.hs  DTDGenerator.hs  GenLib.hs  Handlers.hs  Names.hs  Reader.hs  SrcHelpers.hs  Tool.hs  Types.hs  Util.hs  ValidateLib.hs  Validation.hs  Validators.hs
src/Graphics/Vty/Widgets/Builder/Handlers/: Borders.hs  Box.hs  Button.hs  Centered.hs  CheckBox.hs  Dialog.hs  DirBrowser.hs  Edit.hs  Fills.hs  Fixed.hs  Limits.hs  List.hs  Pad.hs  ProgressBar.hs  Table.hs  Text.hs  Wrap.hs
tests/: TestDriver.hs  Validation.hs
tests/cases/: interface_invalid_child.test  interface_missing_focusgroup.test
tests/validation/: checkbox_label_missing.test  common_children.test  focusGroup_empty.test  interface_invalid_child.test  interface_missing_focusgroup.test  param_refs_work.test  ref_valid.test  sizedBoxes.test  sizedBoxes_invalid_sizes.test  vfill_empty_char.test
