Name:                vty-ui-builder
Version:             0.1
Synopsis:            A user interface code generator for vty-ui
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty <drcygnus@gmail.com>
Maintainer:          Jonathan Daugherty <drcygnus@gmail.com>
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6

Data-files:
  dtd/*.dtd
  tests/validation/*.test

Extra-source-files:
  tests/Validation.hs

Library
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Exposed-modules:
    Graphics.Vty.Widgets.Builder
    Graphics.Vty.Widgets.Builder.Types
    Graphics.Vty.Widgets.Builder.DTDGenerator
    Graphics.Vty.Widgets.Builder.GenLib
    Graphics.Vty.Widgets.Builder.Handlers
    Graphics.Vty.Widgets.Builder.Config

Executable vty-ui-builder
  Hs-Source-Dirs:    src
  Main-is:           Main.hs
  GHC-Options:       -Wall
  Build-Depends:
    vty-ui >= 1.3 && < 1.4,
    HaXml >= 1.22 && < 1.23,
    pretty >= 1.0 && < 1.1,
    mtl >= 2.0 && < 2.1,
    filepath >= 1.1 && < 1.2,
    directory >= 1.0 && < 1.1,
    base >= 4 && < 5,
    haskell98

Executable vty-ui-builder-tests
  Hs-Source-Dirs:    src tests
  Main-is:           TestDriver.hs
  GHC-Options:       -Wall
  Build-Depends:
    HaXml >= 1.22 && < 1.23,
    test-framework >= 0.4 && < 0.5,
    test-framework-hunit >= 0.2 && < 0.3,
    HUnit >= 1.2 && < 1.3,
    base >= 4 && < 5
