Name:                vty-ui-builder
Version:             0.1
Synopsis:            A user interface code generator for vty-ui
Description:         A user interface code generator for vty-ui which
                     converts XML descriptions of vty-ui interfaces
                     into Haskell code capable of constructing the
                     described interfaces.
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty <drcygnus@gmail.com>
Maintainer:          Jonathan Daugherty <drcygnus@gmail.com>
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6

Data-files:
  dtd/*.dtd
  tests/validation/*.test
  demo.xml
  README

Extra-source-files:
  tests/Validation.hs

Source-Repository head
  type:     git
  location: https://github.com/jtdaugherty/vty-ui-builder

Library
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Exposed-modules:
    Graphics.Vty.Widgets.Builder
    Graphics.Vty.Widgets.Builder.Types
    Graphics.Vty.Widgets.Builder.DTDGenerator
    Graphics.Vty.Widgets.Builder.GenLib
    Graphics.Vty.Widgets.Builder.Handlers
    Graphics.Vty.Widgets.Builder.Config
    Graphics.Vty.Widgets.Builder.Util
    Graphics.Vty.Widgets.Builder.ValidateLib
    Graphics.Vty.Widgets.Builder.Tool
    Graphics.Vty.Widgets.Builder.AST
    Graphics.Vty.Widgets.Builder.Reader

Executable vty-ui-builder
  Hs-Source-Dirs:    src
  Main-is:           Main.hs
  GHC-Options:       -Wall
  Build-Depends:
    vty-ui >= 1.3 && < 1.4,
    HaXml >= 1.22 && < 1.23,
    pretty >= 1.0 && < 1.1,
    mtl >= 2.0 && < 2.1,
    filepath >= 1.1 && < 1.2,
    directory >= 1.0 && < 1.1,
    containers >= 0.3 && < 0.4,
    base >= 4 && < 5,
    haskell-src-exts >= 1.11 && < 1.12,
    haskell98

Executable vty-ui-builder-tests
  Hs-Source-Dirs:    src tests
  Main-is:           TestDriver.hs
  GHC-Options:       -Wall
  Build-Depends:
    HaXml >= 1.22 && < 1.23,
    test-framework >= 0.4 && < 0.5,
    test-framework-hunit >= 0.2 && < 0.3,
    HUnit >= 1.2 && < 1.3,
    base >= 4 && < 5
