Name:                vty-ui-builder
Version:             0.1
Synopsis:            A user interface code generator for vty-ui
Description:         A user interface code generator for vty-ui which
                     converts XML descriptions of vty-ui interfaces
                     into Haskell code capable of constructing the
                     described interfaces.
License:             BSD3
License-file:        LICENSE
Author:              Jonathan Daugherty <drcygnus@gmail.com>
Maintainer:          Jonathan Daugherty <drcygnus@gmail.com>
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.6

Data-files:
  README

Source-Repository head
  type:     git
  location: https://github.com/jtdaugherty/vty-ui-builder

Library
  Hs-Source-Dirs:    src
  GHC-Options:       -Wall
  Build-Depends:
    vty-ui >= 1.3 && < 1.4,
    mtl >= 2.0 && < 2.1,
    transformers >= 0.2 && < 0.3,
    filepath >= 1.1 && < 1.3,
    directory >= 1.0 && < 1.2,
    containers >= 0.3 && < 0.5,
    base >= 4 && < 5,
    haskell-src-exts >= 1.11 && < 1.12,
    haskell98
  Exposed-modules:
    Graphics.Vty.Widgets.Builder
    Graphics.Vty.Widgets.Builder.Types
    Graphics.Vty.Widgets.Builder.GenLib
    Graphics.Vty.Widgets.Builder.Handlers
    Graphics.Vty.Widgets.Builder.Config
    Graphics.Vty.Widgets.Builder.Util
    Graphics.Vty.Widgets.Builder.AST
    Graphics.Vty.Widgets.Builder.Reader
